<resources>
    <string name="app_name">Memeory</string>
    <string name="app_tagline">Битва за мемы!</string>
    <string name="app_logo">Логотип приложения</string>
    <string name="meme_image">Изображение мема</string>
    <string name="question_what_meme">Как называется этот мем?</string>
    <string name="correct">Правильно!</string>
    <string name="wrong">Неправильно! Это %s</string>
    <string name="next">Далее</string>
    <string name="results_title">Результаты</string>
    <string name="your_score">Ваш результат</string>
    <string name="score_details">%1$d из %2$d правильных ответов</string>
    <string name="play_again">Играть снова</string>
    <string name="share_results">Поделиться результатами</string>
    <string name="result_image">Изображение результата</string>
    <string name="result_emoji">Эмодзи результата</string>
    <string name="result_excellent">Отлично! Ты настоящий знаток мемов!</string>
    <string name="result_good">Хороший результат! Ты хорошо разбираешься в мемах.</string>
    <string name="result_average">Неплохо, но ты можешь лучше!</string>
    <string name="result_poor">Стоит подтянуть знания мемов!</string>
    <string name="share_message">Я набрал %1$d%% в игре Мемори! Попробуй и ты!</string>
    <string name="restart_game">Начать заново</string>
    <string name="back_to_main">Вернуться на главный экран</string>
    <string name="best_score">Лучший счет</string>
    <string name="best_streak_label">Лучшая серия</string>
    <string name="title_home">Главная</string>
    <string name="title_leaderboard">Рейтинг</string>
    <string name="title_settings">Настройки</string>
    <string name="title_account">Аккаунт</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_sound_enabled">Звуки</string>
    <string name="settings_vibration_enabled">Вибрация</string>
    <string name="settings_night_mode">Ночной режим</string>
    <string name="reset_progress">Сбросить прогресс</string>
    <string name="reset_progress_title">Сбросить статистику?</string>
    <string name="reset_progress_confirmation">Это действие сбросит всю вашу статистику и прогресс в игре. Продолжить?</string>
    <string name="about_app">О приложении</string>
    <string name="app_description">Memeory - увлекательная игра на знание мемов. Проверьте свои знания и отгадайте максимальное количество мемов!</string>
    <string name="app_version">Версия 1.0</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="progress_reset_success">Прогресс сброшен!</string>
    <string name="sound_enabled">Звуки включены</string>
    <string name="sound_disabled">Звуки отключены</string>
    <string name="vibration_enabled">Вибрация включена</string>
    <string name="vibration_disabled">Вибрация отключена</string>
    <string name="night_mode_enabled">Ночной режим включен</string>
    <string name="night_mode_disabled">Ночной режим отключен</string>
    <string name="select_difficulty">Выберите уровень сложности:</string>
    <string name="difficulty_easy">Легкий (5 мемов)</string>
    <string name="difficulty_medium">Средний (10 мемов)</string>
    <string name="difficulty_hard">Сложный (все мемы)</string>
    <string name="start_game">Начать игру</string>
    <string name="streak_label">Серия:</string>
    <string name="streak_count">%d 🔥</string>
    <string name="best_streak">Рекорд: %d 🏆</string>
    <string name="current_level">Уровень: %d 📈</string>
    <string name="drake_hotline_bling">Drake (Дрейк)</string>
    <string name="distracted_boyfriend">Distracted Boyfriend (Неверный парень)</string>
    <string name="expanding_brain">Expanding Brain (Расширяющийся мозг)</string>
    <string name="disaster_girl">Disaster Girl (Девочка-катастрофа)</string>
    <string name="hide_pain_harold">Hide the Pain Harold (Гарольд, скрывающий боль)</string>
    <string name="doge">Doge (Собака Doge)</string>
    <string name="success_kid">Success Kid (Успешный малыш)</string>
    <string name="grumpy_cat">Grumpy Cat (Сердитый кот)</string>
    <string name="roll_safe">Roll Safe (Думающий парень)</string>
    <string name="bad_luck_brian">Bad Luck Brian (Неудачник Брайан)</string>
    <string name="crying_jordan">Crying Jordan (Плачущий Джордан)</string>
    <string name="pepe_frog">Pepe the Frog (Лягушонок Пепе)</string>
    <string name="salt_bae">Salt Bae (Солящий повар)</string>
    <string name="this_is_fine">This is Fine (Всё в порядке)</string>
    <string name="one_does_not_simply">One Does Not Simply (Боромир/Нельзя просто так)</string>
    <string name="coffin_dance">Coffin Dance (Танцующие с гробом)</string>
    <string name="hide_the_pain_harold">Hide the Pain Harold (Гарольд, скрывающий боль)</string>
    <string name="level_format">Уровень: %d</string>
    <string name="streak_format">%d ответов подряд</string>
    <string name="score_percentage_format">%d%%</string>
    <string name="rank_skuf">Скуф</string>
    <string name="rank_znatok">Знаток</string>
    <string name="rank_altuska">Альтушка</string>
    <string name="rank_skuf_desc">Новичок в мире мемов. Вы только начинаете свой путь.</string>
    <string name="rank_znatok_desc">Вы хорошо разбираетесь в мемах, но есть куда расти!</string>
    <string name="rank_altuska_desc">Легенда мемов! Вы знаете все мемы и их происхождение.</string>
    <string name="next_rank_progress">Прогресс до следующего ранга</string>
    <string name="next_rank_info">До ранга "%1$s": %2$d правильных ответов подряд</string>
    <string name="max_rank_reached">Максимальный ранг достигнут!</string>
    <string name="welcome_user">Привет, %s!</string>
    <string name="current_rank">Ваш ранг: %s</string>
    <string name="drake">Дрейк</string>
    <string name="trump">Трамп</string>
    <string name="change_my_mind">Попробуй переубедить</string>
    <string name="surprised_pikachu">Удивленный Пикачу</string>
    <string name="woman_yelling_at_cat">Женщина кричит на кота</string>
    <string name="confused_math_lady">Озадаченная леди</string>
    <string name="black_guy_hiding">Чернокожий прячется</string>
    <string name="stonks">Стонкс</string>
    <string name="tolik_eto_podyezd">Толик это подъезд</string>
    <string name="a_chto_esli">А что если?</string>
    <string name="nu_davay_rasskazhi">Ну давай, расскажи</string>
    <string name="vot_eto_povorot">Вот это поворот</string>
    <string name="zhduun">Ждун</string>
    <string name="chto_proishodit">Что происходит?</string>
    <string name="v_etom_ves_ya">Chill Guy (Чилл гай)</string>
    <string name="ne_smeshite_moi_tapki">Тиньков оценивает</string>
    <string name="khitriy_getsbi">Невозмутимый Райан Гослинг</string>
    <string name="nedoverie_frai">Недоверчивый Фрай</string>
    <string name="q_bad_luck_brian">Что обычно изображает мем с "Неудачником Брайаном"?</string>
    <string name="q_bad_luck_brian_a">Удачные совпадения</string>
    <string name="q_bad_luck_brian_b">Парадоксы логики</string>
    <string name="q_bad_luck_brian_c">Курьезные неудачи</string>
    <string name="q_bad_luck_brian_d">Победы в соревнованиях</string>
    <string name="q_bad_luck_brian_correct">в</string>
    <string name="q_disaster_girl">Почему "Девочка-катастрофа" улыбается на фоне горящего дома?</string>
    <string name="q_disaster_girl_a">Она поджигатель</string>
    <string name="q_disaster_girl_b">Это постановочное фото с сюрпризом</string>
    <string name="q_disaster_girl_c">Её радость — часть контраста ироничного мема</string>
    <string name="q_disaster_girl_d">Дом её врагов</string>
    <string name="q_disaster_girl_correct">в</string>
    <string name="q_distracted_boyfriend">Что символизируют персонажи на меме "Неверный парень"?</string>
    <string name="q_distracted_boyfriend_a">Треугольник любовных отношений</string>
    <string name="q_distracted_boyfriend_b">Невнимательность на работе</string>
    <string name="q_distracted_boyfriend_c">Выбор между старым и новым</string>
    <string name="q_distracted_boyfriend_d">Конфликт друзей</string>
    <string name="q_distracted_boyfriend_correct">в</string>
    <string name="q_doge">Какой стиль речи используется в меме Doge?</string>
    <string name="q_doge_a">Высокий стиль с архаизмами</string>
    <string name="q_doge_b">Ломаный английский с простыми выражениями</string>
    <string name="q_doge_c">Научный стиль</string>
    <string name="q_doge_d">Поэтический язык</string>
    <string name="q_doge_correct">б</string>
    <string name="q_drake_hotline_bling">Что делает Дрейк в популярном меме?</string>
    <string name="q_drake_hotline_bling_a">Танцует под свою песню</string>
    <string name="q_drake_hotline_bling_b">Сравнивает два варианта, отвергая один и принимая другой</string>
    <string name="q_drake_hotline_bling_c">Улыбается на фоне</string>
    <string name="q_drake_hotline_bling_d">Поднимает тост</string>
    <string name="q_drake_hotline_bling_correct">б</string>
    <string name="q_expanding_brain">Что обозначает увеличение мозга в этом меме?</string>
    <string name="q_expanding_brain_a">Рост интеллекта</string>
    <string name="q_expanding_brain_b">Увеличение гнева</string>
    <string name="q_expanding_brain_c">Усталость</string>
    <string name="q_expanding_brain_d">Боль</string>
    <string name="q_expanding_brain_correct">а</string>
    <string name="q_hide_pain_harold">Что символизирует выражение лица Гарольда?</string>
    <string name="q_hide_pain_harold_a">Радость</string>
    <string name="q_hide_pain_harold_b">Подозрение</string>
    <string name="q_hide_pain_harold_c">Вежливую грусть</string>
    <string name="q_hide_pain_harold_d">Скрытую боль за улыбкой</string>
    <string name="q_hide_pain_harold_correct">г</string>
    <string name="q_grumpy_cat">Почему Grumpy Cat стал популярен?</string>
    <string name="q_grumpy_cat_a">Он мяукает на камеру</string>
    <string name="q_grumpy_cat_b">Он выглядит постоянно сердитым</string>
    <string name="q_grumpy_cat_c">Он умеет говорить</string>
    <string name="q_grumpy_cat_d">Его спасли с улицы</string>
    <string name="q_grumpy_cat_correct">б</string>
    <string name="q_crying_jordan">Как используется лицо плачущего Майкла Джордана?</string>
    <string name="q_crying_jordan_a">Чтобы показать грусть и поражение</string>
    <string name="q_crying_jordan_b">Чтобы выразить радость</string>
    <string name="q_crying_jordan_c">В контексте спортивных побед</string>
    <string name="q_crying_jordan_d">Для пародии на фильмы</string>
    <string name="q_crying_jordan_correct">а</string>
    <string name="q_success_kid">Что изображает мем с "Успешным малышом"?</string>
    <string name="q_success_kid_a">Малыша, уронившего игрушку</string>
    <string name="q_success_kid_b">Ребенка, который плачет</string>
    <string name="q_success_kid_c">Малыша с жестом победы</string>
    <string name="q_success_kid_d">Спящего младенца</string>
    <string name="q_success_kid_correct">в</string>
    <string name="q_roll_safe">Что символизирует жест у виска в этом меме?</string>
    <string name="q_roll_safe_a">Страх</string>
    <string name="q_roll_safe_b">Умный, но ошибочный ход</string>
    <string name="q_roll_safe_c">Ловкий трюк</string>
    <string name="q_roll_safe_d">Саркастичное "умное" решение</string>
    <string name="q_roll_safe_correct">г</string>
    <string name="q_coffin_dance">Откуда появился мем "Танцующие с гробом"?</string>
    <string name="q_coffin_dance_a">Из европейского клипа</string>
    <string name="q_coffin_dance_b">С похорон в Гане</string>
    <string name="q_coffin_dance_c">Из компьютерной игры</string>
    <string name="q_coffin_dance_d">Из сериала</string>
    <string name="q_coffin_dance_correct">б</string>
    <string name="q_one_does_not_simply">Из какого фильма сцена с "One does not simply walk into Mordor"?</string>
    <string name="q_one_does_not_simply_a">Гарри Поттер</string>
    <string name="q_one_does_not_simply_b">Игра престолов</string>
</resources>